crates/vite_task_plan/tests/plan_snapshots/fixtures/vpr-shorthand/snapshots/query - vpr expands to vp run.snap
---
source: crates/vite_task_plan/tests/plan_snapshots/main.rs
expression: "&compact_plan"
input_file: crates/vite_task_plan/tests/plan_snapshots/fixtures/vpr-shorthand
---
{
  "#all": {
    "items": [
      {
        "#build": []
      }
    ],
    "neighbors": []
  }
}
